add_subdirectory(microsoft)
add_subdirectory(meituan)
add_subdirectory(bytedance)
add_subdirectory(360)
add_subdirectory(netease)
add_subdirectory(nio)
add_subdirectory(sangfor)
add_subdirectory(oppo)
add_subdirectory(jd)
add_subdirectory(didi)
add_subdirectory(jidu)
add_subdirectory(baidu)
add_subdirectory(momenta)
add_subdirectory(ponyai)
add_subdirectory(hirain)
add_subdirectory(weride)
add_subdirectory(mobvista)
add_subdirectory(zoom)
add_subdirectory(waterdrop)
add_subdirectory(tplink)
add_subdirectory(rong)
add_subdirectory(faw)
add_subdirectory(bigai)
add_subdirectory(neolix)
add_subdirectory(3irobotics)